--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -131,14 +131,14 @@ N       L         Param1     Param2   Param3
 === Starting the application===
 Typically, you would start Delirious by running e.g.:
 {{{
-java -cp mypath/jprime-0.0.0.jar -Xms128m -Xmx1024m se/cbb/jprime/apps/dlrs/Delirious [options] <host tree> <msa> <leaf map>
+java -cp mypath/jprime-0.0.0.jar se/cbb/jprime/apps/dlrs/Delirious [options] <host tree> <msa> <leaf map>
 }}}
 where the path and version of course refer to your current setup.
-Alternatively, you may specify all input in a file thus:
+However, you may need to increase the default heap size allocated by Java. The memory requirements will primarily depend on the size of your gene family, MSA length and substitution model. We recommend using Oracle's Java HotSpot VM, in which case a recommended heap size of 512 MB and a maximum heap size of 1024 MB would be specified with:
 {{{
-java -cp mypath/jprime-0.0.0.jar -Xms128m -Xmx1024m se/cbb/jprime/apps/dlrs/Delirious @<parameter file>
+java -cp mypath/jprime-0.0.0.jar -Xms512m -Xmx1024m se/cbb/jprime/apps/dlrs/Delirious [options] <host tree> <msa> <leaf map>
 }}}
-You may want to tune the Java VM to your specific needs (heap size, performance tuning options, etc.). The memory requirements will primarily depend on the size of your gene family, MSA length and substitution model. Tuning a Java VM is otherwise a non-trivial area and is probably not necessary. If you are using an Oracle Java HotSpot VM (which is recommended), these documents may be of assistance: [http://www.oracle.com/technetwork/java/hotspotfaq-138619.html Oracle Java HotSpot VM FAQ] and [http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html Oracle Java HotSpot VM Options].
+Tuning other aspects of a Java VM is otherwise a non-trivial area and is probably not necessary. Should you still wish to do so, please have a look at these documents: [http://www.oracle.com/technetwork/java/hotspotfaq-138619.html Oracle Java HotSpot VM FAQ] and [http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html Oracle Java HotSpot VM Options].
 
 ===Pilot runs===
 Before performing your real run, you should make a pilot run to assess the MCMC mixing and change tuning parameters accordingly. The length of a pilot run needs typically not be as long as the final run. Try striving for parameter acceptance ratios of 0.2 - 0.5 (preferably in the lower region). Even so, around 0.1 - 0.7 might do the trick on smaller trees. For the topology, the acceptance ratios will typically be much lower, and cannot really be tuned. The acceptance ratios can be inspected in the info file. For larger trees, consider increasing the weight for how often tree moves are carried out.
