Edited wiki page DLRS through web user interface.

--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -141,7 +141,7 @@ java -cp mypath/jprime-X.Y.Z.jar -Xms512m -Xmx1024m se/cbb/jprime/apps/dlrs/Deli
 Tuning other aspects of a Java VM is otherwise a non-trivial area and is probably not necessary. Should you still wish to do so, please have a look at these documents: [http://www.oracle.com/technetwork/java/hotspotfaq-138619.html Oracle Java HotSpot VM FAQ] and [http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html Oracle Java HotSpot VM Options].
 
 ===Pilot runs===
-Before performing your real run, you should make a pilot run to assess the MCMC mixing and change tuning parameters accordingly. The length of a pilot run needs typically not be as long as the final run. Try striving for parameter acceptance ratios of 0.2 - 0.5 (preferably in the lower region). Even so, around 0.1 - 0.7 might do the trick on smaller trees. For the topology, the acceptance ratios will typically be much lower, and cannot really be tuned. The acceptance ratios can be inspected in the info file. For larger trees, consider increasing the weight for how often tree moves are carried out.
+Before performing your real runs, you should make pilot runs to assess the MCMC mixing and change tuning parameters accordingly. The length of a pilot run needs typically not be as long as a final run. Try striving for parameter acceptance ratios of 0.2 - 0.5 (preferably in the lower region). Even so, around 0.1 - 0.7 might do the trick on smaller trees. For the topology, the acceptance ratios will typically be much lower, and cannot really be tuned. The acceptance ratios can be inspected in the info file. For larger trees, consider increasing the weight for how often tree moves are carried out.
 
 ===Final runs===
 For your final runs, the number of iterations required and a suitable thinning factor will depend on the size of your input. No exact numbers can be provided; you will have to rely on "common sense", and analyses ;-)  You probably want to perform 2 - 4 independent "parallel" MCMC chains to be able to conduct proper analysis.
@@ -154,4 +154,5 @@ Consider using [http://cran.r-project.org CRAN R] in general. Several MCMC-tailo
   * [VMCMC VMCMC].
   * The CRAN R package [http://cran.r-project.org/web/packages/coda/index.html CODA].
   * [http://tree.bio.ed.ac.uk/software/tracer/ Tracer].
-As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), potential scale reduction factor (PSRF), sample autocorrelation, and simply manual inspection of the agreement of log-likelihoods, trees and parameter estimates for parallel chains.
+  * [http://ceb.csit.fsu.edu/awty/ AWTY]
+As in all MCMC inference, you should discard an initial proportion of the samples as burn-in. Convergence statistics may assist you in determining how many. Such measures typically include Gelman-Rubin diagnostics, effective sample size (ESS), potential scale reduction factor (PSRF), sample autocorrelation, and simply manual inspection of the agreement of log-likelihoods, trees and parameter estimates for parallel chains. AWTY mentioned above is particularly tailored for inspecting clade convergence diagnostics.
