--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -143,7 +143,7 @@ The info file will look something like:
 #               Seed as byte-array: [-125, 69, -51, -124, -20, -62, 8, -53, -73, 18, -97, 40, -69, -81, 8, 31]
 #
 ... 
-=========================================================================
+#=========================================================================
 # ||                             POST-RUN INFO                           ||
 # =========================================================================
 # DELIRIOUS
@@ -190,7 +190,7 @@ Tuning other aspects of a Java VM is otherwise a non-trivial area and is probabl
 Before performing your real runs, you should make pilot runs to assess the MCMC mixing and change tuning parameters accordingly. The length of a pilot run needs typically not be as long as a final run. Try striving for parameter acceptance ratios of 0.2 - 0.5 (preferably in the lower region). Even so, around 0.1 - 0.7 might do the trick on smaller trees. For the topology, the acceptance ratios will typically be much lower, and cannot really be tuned. The acceptance ratios can be inspected in the info file. For larger trees, consider increasing the weight for how often tree moves are carried out.
 
 ===Final runs===
-For your final runs, the number of iterations required and a suitable thinning factor will depend on the size of your input. No exact numbers can be provided; you will have to rely on "common sense", and analyses ;-)  You probably want to perform 2 - 4 independent "parallel" MCMC chains to be able to conduct proper analysis.
+For your final runs, the number of iterations required and a suitable thinning factor will depend on the size of your input. No exact numbers can be provided; you will have to rely on "common sense", and analyses (see below) ;-)  You probably want to perform 2 - 4 independent "parallel" MCMC chains to be able to conduct proper convergence diagnostics.
 
 ----
 ----
