--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -226,7 +226,7 @@ java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delir
 Family 1572 from the Yeast Gene Order Browser (YGOB) [http://wolfe.gen.tcd.ie/ygob/YGOB].
 
   * [http://jprime.googlecode.com/files/dlrs_example_2.stree dlrs_example_2.stree] (host tree)
-  * [http://jprime.googlecode.com/files/dlrs_example_2.fa dlrs_example_2.fa] (MSA trimmed of uninformative positions)
+  * [http://jprime.googlecode.com/files/dlrs_example_2.fa dlrs_example_2.fa] (MSA)
   * [http://jprime.googlecode.com/files/dlrs_example_2.map dlrs_example_2.map] (guest-to-host leaf map)
 
 === Example 3: ABCA subfamily ===
