--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -223,7 +223,7 @@ java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delir
 
 === Example 2: yeast orthologs ===
 
-Family 1572 from the Yeast Gene Order Browser (YGOB) [http://wolfe.gen.tcd.ie/ygob/YGOB].
+Family 1572 from the [http://wolfe.gen.tcd.ie/ygob/ Yeast Gene Order Browser (YGOB)].
 
   * [http://jprime.googlecode.com/files/dlrs_example_2.stree dlrs_example_2.stree] (host tree)
   * [http://jprime.googlecode.com/files/dlrs_example_2.fa dlrs_example_2.fa] (MSA)
