Edited wiki page DLRS through web user interface.

--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -245,5 +245,6 @@ The ABCA subfamily for some vertebrates, with 12 members in human.
 Delirious comes with a large number of user options; please don't feel overwhelmed! The various types of options are detailed below, although not exhaustively.
 
 === General options ===
-  * '-o <outfile>'  Output file.
+  * `-o <outfile>`  Output file.
   * '-i <iterations>'  Number of iterations.
+  * '-t <'
