--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -244,19 +244,27 @@ The ABCA subfamily for some vertebrates, with 12 members in human.
 == OPTIONS ==
 Delirious comes with a large number of user options; please don't feel overwhelmed! The various types of options are detailed below, although not exhaustively. Please use option `-h` for the most recent specifications.
 
-=== General options ===
-  * `-o <outfile>  `  Output file.
-  * `-i <n>  `  Number of iterations.
-  * `-t <n>  ` Governs how often samples are taken.
-  * `-lout  ` To output the current branch lengths in a Newick tree.
+*General options*
+  * `-o <string>  `  Output file.
+  * `-i <int>  `  Number of iterations.
+  * `-t <int>  ` Governs how often samples are taken.
+  * `-lout  ` To include a Newick tree with branch lengths among the samples.
 
-=== Substitution model ===
-  * `-sm <model>  ` The substitution model. You may also provide your own time-reversible model by inputting the stationary frequencies and the exchangeability matrix (not the transition matrix).
-  * `-srcats <n>  ` Number of discrete site rate categories for modeling site rate heterogeneity.
+*Substitution model*
+  * `-sm <string>  ` The substitution model. You may also provide your own time-reversible model by inputting the stationary frequencies and the exchangeability matrix (not the transition matrix).
+  * `-srcats <int>  ` Number of discrete site rate categories for modeling gamma site rate heterogeneity.
   * `-erpd <distribution>  ` Probability distribution used for modeling iid rates of relaxed molecular clock.
 
-=== Discretization ===
-  * `-dts <timestep>  ` Approximate timestep between discretization points. Remember that this refers to the rescaled species tree where the root-to-leaf time is 1.
-  * `-dmin <n>  ` The minimum number of discretization slices of an edge.
-  * `-dmax <n>  ` The maximum number of discretization slices of an edge.
-  * `-dstem <n>  ` The number of discretization slices of the stem edge. Too many will inflate the running time, too few may cause the gene tree to not fit when trying out different topologies.
+*Discretization*
+  * `-dts <float>  ` Approximate timestep between discretization points. Remember that this refers to the rescaled species tree where the root-to-leaf time is 1.
+  * `-dmin <int>  ` The minimum number of discretization slices of an edge.
+  * `-dmax <int>  ` The maximum number of discretization slices of an edge.
+  * `-dstem <int>  ` The number of discretization slices of the stem edge. Too many will inflate the running time, too few may cause the gene tree to not fit when trying out different topologies.
+
+*Initial values*
+Generally, you may fix an initial value from being inferred by appending it with FIXED.
+  * `-dup  <float>  ` Duplication rate.
+  * `-loss  <float>  ` Loss rate.
+  * `-erpdm  <float>  ` Relaxed molecular clock mean.
+  * `-erpdcv  <float>  ` Relaxed molecular clock coefficient of variation.
+  * `-srshape <float>  ` Gamma site rate shape parameter.
