--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -209,41 +209,42 @@ As in all MCMC inference, you should discard an initial proportion of the sample
 ----
 
 == EXAMPLES ==
-=== Example 1: synthetic gene family ===
+=== 1: synthetic gene family ===
 A synthetic mammal protein family (the same as used in the tutorial above).
 
   * [http://jprime.googlecode.com/files/dlrs_example_1.stree dlrs_example_1.stree] (host tree)
-  * [http://jprime.googlecode.com/files/dlrs_example_1.fa dlrs_example_1.fa] (MSA)
+  * [http://jprime.googlecode.com/files/dlrs_example_1.fa dlrs_example_1.fa] (protein MSA)
   * [http://jprime.googlecode.com/files/dlrs_example_1.map dlrs_example_1.map] (guest-to-host leaf map)
 
-Fancying 1,000,000 iterations, sampling every 200th iteration, and using the JTT substitution model, we get something like:
+Fancying 1,000,000 iterations, sampling every 200th iteration, and using the JTT substitution model, we may get something like:
 {{{
 java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delirious -o dlrs_example_1.mcmc -i 1000000 -t 200 -sm JTT dlrs_example_1.stree dlrs_example_1.fa dlrs_example_1.map
 }}}
 
-=== Example 2: yeast orthologs ===
+=== 2: yeast orthologs ===
 
-Family 1572 from the [http://wolfe.gen.tcd.ie/ygob/ Yeast Gene Order Browser (YGOB)].
+Family 1,975 from the [http://wolfe.gen.tcd.ie/ygob/ Yeast Gene Order Browser (YGOB)].
 
   * [http://jprime.googlecode.com/files/dlrs_example_2.stree dlrs_example_2.stree] (host tree)
-  * [http://jprime.googlecode.com/files/dlrs_example_2.fa dlrs_example_2.fa] (MSA)
+  * [http://jprime.googlecode.com/files/dlrs_example_2.fa dlrs_example_2.fa] (protein MSA)
   * [http://jprime.googlecode.com/files/dlrs_example_2.map dlrs_example_2.map] (guest-to-host leaf map)
+  * [http://jprime.googlecode.com/files/dlrs_example_2.map dlrs_example_2.gtree] (guest tree)
 
-If we hypothesize that the gene tree should be congruent with the host tree and kept fixed, and we wish to output branch lengths with the samples, we might execute:
+If we hypothesize that we have all orthologs, save for a predicted WGD, and we wish to fix this tree and output branch lengths with the samples, we might execute:
 {{{
-java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delirious -o dlrs_example_2.mcmc -i 200000 -t 100 -sm JTT -g dlrs_example_2.gtree -lout dlrs_example_2.stree dlrs_example_2.fa dlrs_example_2.map
+java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delirious -o dlrs_example_2.mcmc -i 100000 -t 100 -sm JTT -g dlrs_example_2.gtree -gfix -lout dlrs_example_2.stree dlrs_example_2.fa dlrs_example_2.map
 }}}
 
-=== Example 3: ABCA subfamily ===
-The ABCA subfamily for some vertebrates, with 12 members in human.
+=== 3: ABCA subfamily ===
+The ABCA subfamily for some vertebrates. 12 gene members in human.
 
   * [http://jprime.googlecode.com/files/dlrs_example_3.stree dlrs_example_3.stree] (host tree)
-  * [http://jprime.googlecode.com/files/dlrs_example_3.fa dlrs_example_3.fa] (MSA trimmed of uninformative positions)
+  * [http://jprime.googlecode.com/files/dlrs_example_3.fa dlrs_example_3.fa] (protein MSA trimmed of uninformative positions)
   * [http://jprime.googlecode.com/files/dlrs_example_3.map dlrs_example_3.map] (guest-to-host leaf map)
 
-On this larger family, we might want to improve on the tuning parameters:
+On this larger family, we might want to model site rate heterogeneity, achieve some more reasonable acceptance rates by changing the tuning parameters based on pilot runs, and increase the how often the guest tree topology and the branch lengths are perturbed:
 {{{
-java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delirious -o dlrs_example_2.mcmc -i 200000 -t 100 -sm JTT -g dlrs_example_2.gtree -lout dlrs_example_2.stree dlrs_example_2.fa dlrs_example_2.map
+java -cp mypath/jprime-X.Y.Z.jar -Xms768m -Xmx1536m se/cbb/jprime/apps/dlrs/Delirious -i 500000 -t 100 -o dlrs_example_3.mcmc -lout -sm JTT -srcats 4 -tngdup [0.3,0.3] -tngloss [0.3,0.3] -tngerm [0.1,0.1] -tngercv [0.1,0.1] -tngl [0.4,0.4] -tngsrshape [0.07,0.07] -tngwg [3.0,3.0] -tngwl [20.0,20.0] dlrs_example_3.stree dlrs_example_3.fa dlrs_example_3.map
 }}}
 
 ----
