--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -223,14 +223,14 @@ java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delir
 
 === 2: Yeast orthologs ===
 
-Family 1,975 from the [http://wolfe.gen.tcd.ie/ygob/ Yeast Gene Order Browser (YGOB)].
+Family no. 1,975 from the [http://wolfe.gen.tcd.ie/ygob/ Yeast Gene Order Browser (YGOB)].
 
   * [http://jprime.googlecode.com/files/dlrs_example_2.stree dlrs_example_2.stree] (host tree)
   * [http://jprime.googlecode.com/files/dlrs_example_2.fa dlrs_example_2.fa] (protein MSA)
   * [http://jprime.googlecode.com/files/dlrs_example_2.map dlrs_example_2.map] (guest-to-host leaf map)
   * [http://jprime.googlecode.com/files/dlrs_example_2.map dlrs_example_2.gtree] (guest tree)
 
-If we hypothesize that we have all orthologs, save for a predicted WGD, and we wish to fix this tree and output branch lengths with the samples, we might execute:
+If we hypothesize that we only orthologs, save for a predicted WGD, and we wish to fix this tree and output branch lengths with the samples, we might execute:
 {{{
 java -cp mypath/jprime-X.Y.Z.jar -Xms128m -Xmx256m se/cbb/jprime/apps/dlrs/Delirious -o dlrs_example_2.mcmc -i 100000 -t 100 -sm JTT -g dlrs_example_2.gtree -gfix -lout dlrs_example_2.stree dlrs_example_2.fa dlrs_example_2.map
 }}}
