--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -244,7 +244,7 @@ The ABCA subfamily for some vertebrates. 12 gene members in human.
 
 On this larger family, we might want to model site rate heterogeneity, achieve some more reasonable acceptance rates by changing the tuning parameters based on pilot runs, and increase the how often the guest tree topology and the branch lengths are perturbed:
 {{{
-java -cp mypath/jprime-X.Y.Z.jar -Xms768m -Xmx1536m se/cbb/jprime/apps/dlrs/Delirious -i 500000 -t 100 -o dlrs_example_3.mcmc -lout -sm JTT -srcats 4 -tngdup [0.3,0.3] -tngloss [0.3,0.3] -tngerm [0.1,0.1] -tngercv [0.1,0.1] -tngl [0.4,0.4] -tngsrshape [0.07,0.07] -tngwg [3.0,3.0] -tngwl [20.0,20.0] dlrs_example_3.stree dlrs_example_3.fa dlrs_example_3.map
+java -cp mypath/jprime-X.Y.Z.jar -Xms768m -Xmx1536m se/cbb/jprime/apps/dlrs/Delirious -i 500000 -t 200 -o dlrs_example_3.mcmc -lout -sm JTT -srcats 4 -tngdup [0.3,0.3] -tngloss [0.3,0.3] -tngerm [0.1,0.1] -tngercv [0.1,0.1] -tngl [0.4,0.4] -tngsrshape [0.07,0.07] -tngwg [3.0,3.0] -tngwl [15.0,15.0] dlrs_example_3.stree dlrs_example_3.fa dlrs_example_3.map
 }}}
 
 ----
@@ -252,18 +252,18 @@ java -cp mypath/jprime-X.Y.Z.jar -Xms768m -Xmx1536m se/cbb/jprime/apps/dlrs/Deli
 
 
 == OPTIONS ==
-Delirious comes with a large number of user options; please don't feel overwhelmed! The various types of options are detailed below, although not exhaustively. Please use option `-h` for the most recent specifications.
+Delirious comes with a large number of user options; please don't feel overwhelmed! Some of the more commonly used ones are detailed below. You can always use option `-h` to get a more up-to-date description of all available options.
 
 *General options*
-  * `-o <string>  `  Output file.
-  * `-i <int>  `  Number of iterations.
-  * `-t <int>  ` Governs how often samples are taken.
-  * `-lout  ` To include a Newick tree with branch lengths among the samples.
+  * `-o <string>  `  Output file for MCMC chain. The auxiliary info file will be appended with .info.
+  * `-i <int>  `  Number of iterations, e.g. 1000000.
+  * `-t <int>  ` Governs how often samples are taken, e.g. 200.
+  * `-lout  ` To include a Newick tree with branch lengths among the samples, and not only a plain Newick tree.
 
 *Substitution model*
-  * `-sm <string>  ` The substitution model. You may also provide your own time-reversible model by inputting the stationary frequencies and the exchangeability matrix (not the transition matrix).
-  * `-srcats <int>  ` Number of discrete site rate categories for modeling gamma site rate heterogeneity.
-  * `-erpd <string>  ` Probability distribution used for modeling iid rates of relaxed molecular clock.
+  * `-sm <string>  ` The substitution model. Some common empirical models are included. However, you may also provide your own time-reversible model by inputting its stationary frequencies and its exchangeability matrix (not the transition matrix).
+  * `-srcats <int>  ` Number of discrete site rate categories for modeling gamma site rate heterogeneity. The default is 1 category. Note: Running time may in many cases grow linearly with the number of categories. Invariant sites are not modeled.
+  * `-erpd <string>  ` Probability distribution used for modeling iid rates of relaxed molecular clock. The default is the gamma distribution.
 
 *Discretization*
 See the figure above for a more detailed description.
