--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -261,25 +261,33 @@ Delirious comes with a large number of user options; please don't feel overwhelm
   * `-lout  ` To include a Newick tree with branch lengths among the samples, and not only a plain Newick tree.
 
 *Substitution model*
+
+Delirious can work with DNA, peptide and codon MSAs. As of yet, working with several independent loci is not supported.
   * `-sm <string>  ` The substitution model. Some common empirical models are included. However, you may also provide your own time-reversible model by inputting its stationary frequencies and its exchangeability matrix (not the transition matrix).
   * `-srcats <int>  ` Number of discrete site rate categories for modeling gamma site rate heterogeneity. The default is 1 category. Note: Running time may in many cases grow linearly with the number of categories. Invariant sites are not modeled.
   * `-erpd <string>  ` Probability distribution used for modeling iid rates of relaxed molecular clock. The default is the gamma distribution.
 
 *Discretization*
-See the figure above for a more detailed description.
+
+Should the default discretization settings not be satisfactory, you can change them. A denser discretization means higher precision but also higher running time. See the figure above for a more detailed description.
   * `-dts <float>  ` Approximate timestep between discretization points. Remember that this refers to the rescaled species tree where the root-to-leaf time is 1.
   * `-dmin <int>  ` The minimum number of discretization slices of an edge.
   * `-dmax <int>  ` The maximum number of discretization slices of an edge.
-  * `-dstem <int>  ` The number of discretization slices of the stem edge. Too many will inflate the running time, too few may cause the gene tree to not fit when trying out different topologies.
+  * `-dstem <int>  ` The number of discretization slices of the stem edge. Too many will inflate the running time, too few may cause the gene tree to not fit when trying out different topologies in the MCMC.
 
-*Initial values*
-Generally, you may fix an initial value from being inferred by appending it with FIXED.
-  * `-dup  <float>  ` Duplication rate.
-  * `-loss  <float>  ` Loss rate.
-  * `-erpdm  <float>  ` Relaxed molecular clock mean.
-  * `-erpdcv  <float>  ` Relaxed molecular clock coefficient of variation.
-  * `-srshape <float>  ` Gamma site rate shape parameter.
+*Initial values and leaving parameters out*
+
+  * `-g <string>  ` Initial guest tree. You can choose to create a random tree, a NJ tree based on sequence identity, or inputting your own tree, possibly with branch lengths. Recently, support for inferring a more sophisticated NJ tree was added with option `-fp`.
+  * `-gfix  ` Fix the guest tree.
+  * `-lfix  ` Fix the branch lengths.
+  * `-dup  <float>  ` Duplication rate. You may fix this value by appending it with FIXED.
+  * `-loss  <float>  ` Loss rate. Fix as above.
+  * `-erpdm  <float>  ` Relaxed molecular clock mean. Fix as above.
+  * `-erpdcv  <float>  ` Relaxed molecular clock coefficient of variation. Fix as above.
+  * `-srshape <float>  ` Gamma site rate shape parameter. Fix as above.
 
 *Tuning parameters*
-  * `-tng<param> <[float,float]>  ` General pattern for tuning parameters of floating point state parameters. The specified values controls the proposal distributions coefficient of variation for the first and last iterations respectively.
+
+In order to get good mixing, it might be necessary to tweak the tuning parameters. These come in several flavours, of which the most important ones are for 1) setting the audacity of the proposed new states, and 2) setting how often a state parameter should be perturbed. 
+  * `-tng<param> <[float,float]>  ` General pattern for tuning parameters of floating point state parameters. The specified values controls the proposal distributions CV for the first and last iterations respectively. Inspect acceptance ratios of pilot runs in their info files. Try striving for around 0.2-0.5. If to low, decrease the CV, if too high, increase the CV.
   * `-tngw<param> <[float,float]>  ` General pattern for setting the weights for how often parameters are perturbed with respect to each other.
