Edited wiki page DLRS through web user interface.

--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -208,12 +208,17 @@ Several MCMC-tailored analysis softwares exist, among them:
   * [http://tree.bio.ed.ac.uk/software/tracer/ Tracer].
   * [http://ceb.csit.fsu.edu/awty/ AWTY]. Particularly tailored for inspecting clade convergence diagnostics.
 
-Generally, CRAN R is suitable for many types of analysis. For instance, you could read and plot the dupliocation rate thus:
+Generally, CRAN R is suitable for many types of analysis. For instance, you could read and plot the duplication rate in R thus:
 {{{
-burnInLim <- 2500;
-chain <- read.table('myoutput.mcmc', header=TRUE);
-chain <- chain[chain$Iteration>burnInLim,];
-hist(chain$DuplicationRate, 40);
+> burnInLim <- 2500;
+> chain <- read.table('myoutput.mcmc', header=TRUE);
+> chain <- chain[chain$Iteration > burnInLim, ];
+> hist(chain$DuplicationRate, 40);
+}}}
+
+To get a quick glance at the tree space, you could even use a shell such as bash (assuming the tree is in column 9 and we only look at the last :
+{{{
+$ cut -f9 myoutput.mcmc | tail -5000 | sort | uniq -c | sort -n
 }}}
 
 ----
