Edited wiki page DLRS through web user interface.

--- a/wiki/DLRS.wiki
+++ b/wiki/DLRS.wiki
@@ -115,9 +115,8 @@ Monodelphis_domestica_1	Monodelphis_domestica
 ----
 
 == OUTPUT ==
-Output is typically directed to a file with the following option: `-o myoutput.mcmc`. If not specified, output will be written to stdout.
+Output is typically directed to a file with the following option: `-o myoutput.mcmc`. If not specified, output will be written to stdout. If the file option is used, two files will be produced:
 
-Output normally consists of two files:
   # {{{myoutput.mcmc}}}, containing tab-delimited samples drawn from the posterior distribution.
   # {{{myoutput.mcmc.info}}}, containing general pre- and post-run information.
 
